# reimagined-pilot

./: .gitignore  policy.json
backend/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/aem-json-examples-store/: products.model.json  protections.model.json
backend/docs/: architecture.md  business-case.md  codebase-review.md  file-manager-frontend.md  logic-flow.md
backend/docs/components/: aem-pruner.md  agents.md  api-routes.md  bedrock-kb.md  database.md  file-management-portal.md  nav-parser.md  pipeline.md  queue-worker.md  routing-matrix.md  s3-uploader.md  stream-manager.md  versioning.md
backend/kb_manager/: __init__.py  config.py  database.py  logging_config.py  main.py  models.py
backend/kb_manager/agents/: __init__.py  _bedrock_structured.py  _models.py  discovery.py  extractor.py  link_triage.py  metadata_enricher.py  qa.py
backend/kb_manager/alembic/: env.py
backend/kb_manager/queries/: __init__.py  files.py  folders.py  jobs.py  links.py  nav_cache.py  queue.py  (+3 more)
backend/postman/: ABG_Knowledge_Base.postman_collection.json
backend/scripts/: cleanup_failed_run.py  ingest_excel.py  reset_orphan_sources.py  retro_seed_job.py  truncate_tables.py
backend/tests/: test_aem_pruner.py  test_display_status_properties.py  test_file_background_tasks.py  test_file_ops_routes.py  test_folders_routes.py  test_legacy_surfacing.py  test_pipeline.py  test_routing_matrix.py  test_s3_uploader.py  test_s3_uploader_m3.py  test_sse_streaming.py  test_stream_manager.py  test_upload_pipeline.py  test_upload_route.py  test_versioning.py
(+130 files in other folders)
